# sample_project_w_gtest

./: CMakeLists.txt  README.md  main.cpp
include/: SampleClass.h
src/: CMakeLists.txt  SampleClass.cpp
tests/: TestOfTests.cpp  run_tests.cpp
